--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ table {
     width: 130px;
     height: 130px;
     border-radius: 10px;
-    background-color: blue;
+    background-color: #bde0fe;
 }
 
 .winner {
