--- a/style.css
+++ b/style.css
@@ -193,3 +193,198 @@ span {
 /* .total {
     color: red;
 } */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+/* start of my css */
+
+body {
+    height: 50rem;
+}
+
+.card {
+    /* background-color: #f5ebe0; */
+    background: linear-gradient(to right, #f5ebe0, #d5bdaf);
+}
+
+#scoreBox1,
+#scoreBox2 {
+    width: 130px;
+    height: 130px;
+    border-radius: 10px;
+    background-color: #bde0fe;
+    align-items: center;
+}
+
+box1,
+box2 {
+    display: inline-block;
+    text-align: center;
+}
+
+#dice {
+    width: 9rem;
+    height: 9rem;
+}
+
+.messageArea {
+    display: inline-block;
+}
+
+#message {
+    text-transform: uppercase;
+    color: green;
+}
+
+.winner {
+    color: green;
+}
+
+.loser {
+    color: red;
+}
+
+p,
+h1,
+button,
+span {
+    font-family: 'Lato', sans-serif;
+}
+
+/* .total {
+    color: red;
+} */
